change icons and image and iotproject.js correct the arrow align

--- a/src/css/IotBanner.css
+++ b/src/css/IotBanner.css
@@ -113,7 +113,7 @@
   display: block;
 }
 .bg1{
-  background-image:linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.9)), url('/public/images/image1.jpg');
+  background-image:linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.9)), url('/public/images/iot-network.jpg');
   background-size: cover;
   background-position: center;
   overflow: hidden;
@@ -123,7 +123,7 @@
   height: 200px;
 }
 .bg2{
-  background-image:linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.9)), url('/public/images/image2.jpg');
+  background-image:linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.9)), url('/public/images/iot-camera.png');
   background-size:cover;
   background-repeat: no-repeat;
   border-radius: 5px;
@@ -133,7 +133,7 @@
   overflow: hidden;
 }
 .bg3{
-  background-image:linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.9)), url('/public/images/image3.jpg');
+  background-image:linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.9)), url('/public/images/iot-projectors.png');
   background-size:cover;
   background-repeat: no-repeat;
   border-radius: 5px;
@@ -143,7 +143,7 @@
   overflow: hidden;
 }
 .bg4{
-  background-image:linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.9)),url('/public/images/image4.jpg');
+  background-image:linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.9)),url('/public/images/iot-projectors.png');
   background-size:cover;
   background-repeat: no-repeat;
   border-radius: 5px;
